# kfree_skb

./: .gitignore  BUILDING_EBPF.md  BUILD_SUCCESS.md  CONVERSION_COMPLETE.md  CONVERSION_SUMMARY.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  Makefile  PROJECT_INDEX.md  QUICKSTART.md  README.md  TRACEPOINT_AVAILABILITY.md  build.rs  kfree_skb.bpf.c  print_socket_drop_stats.py  test.rs  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
ebpf/: Cargo.toml
ebpf/src/: main.rs
src/: main.rs  stats.rs
