[package]
name = "kfree_skb_tracer"
version = "0.1.0"
edition = "2021"
description = "High-performance eBPF tracer for Linux socket drop events in pure Rust"
authors = ["Conversion from C/Python"]
license = "GPL-2.0-or-later"
repository = "https://github.com/yourusername/warp_kfree_skb"
keywords = ["ebpf", "bpf", "kernel", "tracing", "networking"]
categories = ["command-line-utilities", "os"]

[[bin]]
name = "kfree_skb"
path = "src/main.rs"

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
